--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: SDEtransport
 Version: 0.1.0
 Author: Jonathan Levy <jlstilesmusic@gmail.com>
 Maintainer: Jonathan Levy <jlstilesmusic@gmail.com>
-Description: A package to compute TMLE's for various parameters of interest, keeping the books in the process for analysis.
+Description: Computes TMLE estimates and transported estimates (from one study site to another) for direct and indirect effects in the presence of intermediary confounder, also know as stochastic direct and indirect effects.
 Depends: R (>= 2.14.0),
     mvtnorm,
     origami,
@@ -62,7 +62,7 @@ Remotes:
     github::tlverse/delayed,
     github::jeremyrcoyle/hal9001
 License: GPL-3
-BugReports: https://github.com/jlstiles/cateSurvival/issues
+BugReports: https://github.com/jlstiles/SDEtransport/issues
 Encoding: UTF-8
 LazyData: yes
 LazyLoad: yes
